--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -9,34 +9,47 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v4
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: 17
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-        with:
-          api-level: 33
-          build-tools: "33.0.2"
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 18
 
-      - name: Install Bubblewrap CLI
-        run: npm install -g @bubblewrap/cli
+    - name: Install Android SDK
+      uses: android-actions/setup-android@v3
+      with:
+        api-level: 33
+        build-tools: "33.0.2"
 
-      - name: Init Bubblewrap
-        run: npx bubblewrap init --manifest=manifest.json --packageId=com.nuqtaziyaa.app --name="Nuqtaziyaa App" --skipPwaValidation --nonInteractive
+    - name: Install Bubblewrap
+      run: npm install -g @bubblewrap/cli
 
-      - name: Build APK
-        run: npx bubblewrap build --non-interactive
+    - name: Init Bubblewrap (non-interactive)
+      run: |
+        npx bubblewrap init \
+          --manifest https://aminpahrudin101.github.io/nuqtaziyaa-app/manifest.json \
+          --application-id com.nuqtaziyaa.app \
+          --name "Nuqtaziyaa App" \
+          --launcher-name "Nuqtaziyaa" \
+          --theme-color "#000000" \
+          --skip-pwa-validation \
+          --yes
 
-      - name: Upload APK artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: apk-files
-          path: |
-            app-release.apk
-            app-release-bundle.aab
+    - name: Build APK
+      run: |
+        cd android
+        ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: nuqtaziyaa-app-apk
+        path: android/app/build/outputs/apk/debug/app-debug.apk
